tests/positive/UsingHiding/Main.juvix
module Main;

module M;
  axiom A : Type;

  id : {A : Type} -> A -> A
    | a := a;

  axiom B : Type;
end;

open M using {A; id as myId};
open M hiding {B};

t : {X : Type} -> X -> X := myId;
