tests/negative/Internal/Positivity/E3.juvix
module E3;

axiom B : Type;
type X  :=
  c : B -> (X -> B) -> X;

end;
